--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   flutter_contacts: ^1.1.7+1
   image_picker: 1.0.4
   file_picker: ^5.2.11
-#  video_player: ^2.8.2
   emoji_picker_flutter: ^1.6.3
   firebase_storage: ^11.6.0
   flutter_pin_code_fields: ^2.1.0
@@ -50,13 +49,10 @@ dependencies:
   #http: ^0.13.5
   country_pickers: ^2.0.0
   get: ^4.6.6
-#  equatable: ^2.0.5
 #  get_it: ^7.6.6
 #  font_awesome_flutter: 10.5.0
-  #  agora_uikit: ^1.3.1
   get_time_ago: ^1.3.1
   swipe_to: ^1.0.2
-#  flutter_story_view: 0.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -69,6 +65,7 @@ dependencies:
   permission_handler: ^11.3.1
   video_player: ^2.8.5
   flutter_story_view: ^0.0.4
+  agora_uikit: ^1.3.10
 
 dev_dependencies:
   flutter_test:
